--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "next": "14.1.3",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-qr-code": "^2.0.12"
   },
