--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "next": "14.1.3",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
