--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.24",
     "next": "14.1.3",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
